chore: rename .env to .env.example

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ CONCURRENT_REQUESTS=1
 #当请求失败时增加的并发请求数
 INCREASE_CONCURRENT_ON_FAILURE=0
 
-允许的最大并发请求数
+#允许的最大并发请求数
 MAX_CONCURRENT_REQUESTS=3
 
 #是否启用联网模式(联网模式有严格的审核)
