feat: add CUSTOM_ENDPOINT and CUSTOM_HEADERS

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,11 @@ ENABLE_VERTEX=false
 
 #vertex ai 凭证
 GOOGLE_CREDENTIALS_JSON=''
+
+#========== 高级配置 ==========
+
+#自定义API端点（如果需要使用代理或自定义服务器）
+#CUSTOM_ENDPOINT=https://your-custom-endpoint.com
+
+#自定义请求头（格式: key1=val1;key2=val2）
+#CUSTOM_HEADERS=X-Custom-Header=value1;X-Another-Header=value2
