feat: add CUSTOM_POINT and CUSTOM_HEADERS

--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,9 @@ GOOGLE_CREDENTIALS_JSON=''
 
 #是否启用思考过程（兼容老版本不支持思考的模型）
 ENABLE_THINKING=true
+
+#自定义API端点（如果需要使用代理或自定义服务器）
+#CUSTOM_ENDPOINT=https://your-custom-endpoint.com
+
+#自定义请求头（格式: key1=val1;key2=val2）
+#CUSTOM_HEADERS=X-Custom-Header=value1;X-Another-Header=value2
